Fixed spacing of text and box in programs boxes. Changed font weight to 300.

--- a/app/(pages)/_components/Home/Home.module.scss
+++ b/app/(pages)/_components/Home/Home.module.scss
@@ -120,7 +120,7 @@
 
     p{
         font-size: 1.28rem; //make globals?
-        font-weight: 275;
+        font-weight: 300;
         line-height: 1.8rem;
     }
 }
