--- a/app/(pages)/_components/Home/storiesSlide.module.scss
+++ b/app/(pages)/_components/Home/storiesSlide.module.scss
@@ -12,7 +12,7 @@
     padding-right: 6%;
     width: 32%;
     padding-top: 1.4%;
-    font-weight: 280;
+    font-weight: 300;
     color: var(--black);
 
     h2{
